--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic;display=swap">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css"> <!--href="css/style.min.css"-->
   </head>
   <body class="page-body">
     <div class="shadow">
@@ -38,6 +38,7 @@
       </header>
       <main class="page-catalog container">
         <section class="page-title"> 
+          <h2 class="visually-hidden">Фильтры для поиска</h2>
           <form action="https://echo.htmlacademy.ru/courses" method="post">
             <fieldset class="breadcrumbs inrfastructure-filter">
               <legend class="header-bold">Инфраструктура</legend>
@@ -54,7 +55,6 @@
               <label for="wifi" class="filter-label">Wi-fi</label>
               </p>
             </fieldset>  
-
             <fieldset class="breadcrumbs housing-filter">
               <legend class="header-bold">Тип жилья</legend>
               <p class="text-bold">
@@ -107,13 +107,18 @@
             </p> 
         </section>
         <section class="filter-option">
+          <h2 class="visually-hidden">Найденные отели №1</h2>
           <div class="filter-foto">
             <img src="img/Layer21.jpg" width="135" height="90" alt="Amara Resort & Spa">
           </div>
           <div class="filter-category">  
             <h2>Amara Resort & Spa</h2>
-            <span class="filter-category-hotel">Гостиница</span>
-            <span class="filter-category-sum">От 4000 р</span>
+            <table class="filter-category-hotel">
+              <tr>
+               <th>Гостиница</th>
+               <th>От 4000 р</th>
+              </tr>
+            </table>
             <div>
               <p>
               <input class="button-more" type="submit" name="detailed" value="Подробнее"/>
@@ -122,33 +127,38 @@
             </div>
           </div>
           <div class="filter-rating">
-          <div class="filter-rating-star">
-            <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
-              <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
-            </svg>
-            <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
-              <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
-            </svg>
-            <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
-              <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
-            </svg>
-            <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
-              <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
-            </svg>
-          </div>
+            <span class="filter-rating-star">
+              <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
+                <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
+              </svg>
+              <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
+                <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
+               </svg>
+              <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
+                <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
+              </svg>
+              <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
+                <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
+              </svg>
+            </span>
             <p class="filter-rating-hotel">
               Рейтинг: 8,5
             </p>
           </div>
         </section>
         <section class="filter-option">
+          <h2 class="visually-hidden">Найденные отели №2</h2>
           <div class="filter-foto">
             <img src="img/Layer89copy.jpg" width="135" height="90" alt="Desert Quail Inn">
           </div>
           <div class="filter-category">  
             <h2>Desert Quail Inn</h2>
-            <span class="filter-category-hotel">Мотель</span>
-            <span class="filter-category-sum">От 3000 р</span>
+            <table class="filter-category-hotel">
+              <tr>
+               <th>Мотель</th>
+               <th>От 3000 р</th>
+              </tr>
+            </table>
             <div>
               <p>
               <input class="button-more" type="submit" name="detailed" value="Подробнее"/>
@@ -157,30 +167,35 @@
             </div>
           </div>
             <div class="filter-rating">
-              <div class="filter-rating-star">
-              <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
-                <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
-              </svg>
-              <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
-                <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
-              </svg>
-              <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
-                <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
-              </svg>
-            </div>
+              <span class="filter-rating-star">
+                <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
+                  <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
+                </svg>
+                <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
+                  <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
+                </svg>
+                <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
+                  <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
+                </svg>
+              </span>
               <p class="filter-rating-hotel">
               Рейтинг: 8,9
               </p>
             </div>
         </section>
         <section class="filter-option">
+          <h2 class="visually-hidden">Найденные отели №3</h2>
           <div class="filter-foto">
             <img src="img/Rectangle.jpg" width="135" height="90" alt="Villas At Poco Diablo">
           </div>
           <div class="filter-category">  
             <h2>Villas At Poco Diablo</h2>
-            <span class="filter-category-hotel">Аппартаменты</span>
-            <span class="filter-category-sum">От 2000 р</span>
+            <table class="filter-category-hotel">
+              <tr>
+               <th>Аппартаменты</th>
+               <th>От 2000 р</th>
+              </tr>
+            </table>
             <div>
               <p>
               <input class="button-more" type="submit" name="detailed" value="Подробнее"/>
@@ -190,13 +205,13 @@
           </div> 
           <div class="filter-rating">
             <div class="filter-rating-star">
-            <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
-              <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
-            </svg>
-            <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
-              <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
-            </svg>
-          </div>
+              <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
+               <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
+              </svg>
+              <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
+                <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
+              </svg>
+            </div>
             <p class="filter-rating-hotel">Рейтинг: 9,2</p>
           </div>
         </section>
@@ -204,12 +219,14 @@
       <footer class="page-footer footer-catalog">
         <div class="container">
           <section class="footer-contacts">
+            <h2 class="visually-hidden">Visitsedona</h2>
             <a href="#">#Visitsedona</a>
             <p>
               <a class="contacts-phone" href="tel:88005558682">+7 800 555-86-28</a>
             </p>
           </section>
           <section class="footer-social">
+            <h2 class="visually-hidden">Социальные сети</h2>
             <ul class="social-list">
               <li><a class="social-button twitter" href="#"><svg width="17" height="16" viewBox="0 0 17 16" fill="none">
                 <path d="M10.95 1.14403C12.635 0.648028 13.934 1.41403 14.527 2.32303C15.2 2.09203 15.858 1.84203 16.538 1.61503C16.5249 2.30139 16.2117 2.94755 15.681 3.38303C16.366 3.55303 16.985 2.89203 16.985 2.89203C16.816 3.89203 15.979 4.68003 15.422 4.91603C15.191 11.666 12.247 16.133 5.34498 15.998H4.89898C4.48898 15.998 0.734977 15.538 0.000976562 14.111C2.27198 14.307 3.89398 13.689 4.69398 12.934C3.73398 12.634 2.01498 12.457 1.71498 9.98403C2.06398 10.09 2.27898 10.212 2.90498 10.103C1.70498 9.24703 0.373977 8.53003 0.447977 6.33003C0.732977 6.65803 1.51498 6.86603 1.78798 6.80203C1.08498 6.56103 -0.182023 3.44203 0.893977 1.85003C2.71198 3.70403 4.62898 5.45603 8.04598 5.62303C8.25398 3.33003 9.18298 1.79303 10.95 1.14403Z" fill="white"/>
@@ -228,6 +245,7 @@
             </ul>
           </section> 
           <section class="footer-copyright"> 
+            <h2 class="visually-hidden">HTML Academy</h2>
             <p>Website by</p>
             <p><a class="logo-button" href="https://htmlacademy.ru"><svg width="115" height="33" viewBox="0 0 115 33" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#clip0_53374_390)">
