catalog the end
catalog the end

--- a/catalog.html
+++ b/catalog.html
@@ -71,7 +71,7 @@
               </p>
             </fieldset>
             <fieldset class="breadcrumbs range-filter">  
-              <legend class="header-bold">Стоимость в сутки (р):</legend>  
+              <legend class="header-bold rub">Стоимость в сутки, ₽:</legend>  
                 <div class="price-controls">
                   <input class="min-price" type="text" value="От 0">
                   <a class="split-line" href="#"><svg width="2" height="22" viewBox="0 0 2 22" fill="none">
@@ -83,7 +83,7 @@
                 <div class="toggle toggle-max" tabindex="0"></div>
                 <div class="range-controls">
                 <div class="scale"> </div>
-                <div  class="bar" style="margin-left: 84%;"></div>
+                <div  class="bar"></div>
                 <div class="toggle min-toggle"></div>
                 <div class="toggle max-toggle"></div>
               </div>
@@ -127,22 +127,26 @@
             </div>
           </div>
           <div class="filter-rating">
-            <span class="filter-rating-star">
-              <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
+            <ul class="filter-rating-star">
+              <li><span class="visually-hidden">1 звезда</span>
+                <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
                 <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
-              </svg>
-              <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
-                <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
-               </svg>
-              <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
-                <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
-              </svg>
-              <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
-                <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
-              </svg>
-            </span>
+              </svg></li>
+              <li><span class="visually-hidden">2 звезды</span>
+                <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
+                  <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
+                </svg></li>
+              <li><span class="visually-hidden">3 звезды</span>
+                <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
+                  <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
+                </svg></li>
+              <li><span class="visually-hidden">4 звезды</span>
+                <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
+                  <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
+                </svg></li>
+            </ul>
             <p class="filter-rating-hotel">
-              Рейтинг: 8,5
+              Рейтинг: <span class="item-rating">8,5</span>
             </p>
           </div>
         </section>
@@ -167,19 +171,22 @@
             </div>
           </div>
             <div class="filter-rating">
-              <span class="filter-rating-star">
-                <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
+              <ul class="filter-rating-star">
+                <li><span class="visually-hidden">1 звезда</span>
+                  <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
                   <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
-                </svg>
-                <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
-                  <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
-                </svg>
-                <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
-                  <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
-                </svg>
-              </span>
+                </svg></li>
+                <li><span class="visually-hidden">2 звезды</span>
+                  <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
+                    <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
+                  </svg></li>
+                <li><span class="visually-hidden">3 звезды</span>
+                  <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
+                    <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
+                  </svg></li>
+              </ul>
               <p class="filter-rating-hotel">
-              Рейтинг: 8,9
+                Рейтинг: <span class="item-rating">8,9</span>
               </p>
             </div>
         </section>
@@ -204,15 +211,19 @@
             </div>
           </div> 
           <div class="filter-rating">
-            <div class="filter-rating-star">
-              <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
-               <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
-              </svg>
-              <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
+            <ul class="filter-rating-star">
+              <li><span class="visually-hidden">1 звезда</span>
+                <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
                 <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
-              </svg>
-            </div>
-            <p class="filter-rating-hotel">Рейтинг: 9,2</p>
+              </svg></li>
+              <li><span class="visually-hidden">2 звезды</span>
+                <svg width="19" height="17" viewBox="0 0 19 17" fill="none">
+                  <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#81B3D2"/>
+                </svg></li>
+            </ul>
+            <p class="filter-rating-hotel">
+              Рейтинг: <span class="item-rating">9,2</span>
+            </p>
           </div>
         </section>
       </main> 
